v2.8 - fix spacing on services, intro, and avatar modal

--- a/src/scss/_intro.scss
+++ b/src/scss/_intro.scss
@@ -3,8 +3,14 @@
     border-radius: 15px;
     width: 100%;
     max-width: 800px;
-    height: 200px;
+    height: 160px;
+    padding-top: 10px;
     position: relative;
+
+    @media (min-width: $medium) {
+        height: 200px;
+        padding-top: 0;
+    }
 
     .icon {
         position: absolute;
