--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -116,6 +116,8 @@ body {
 			background:$white;
 			padding: 10px;
 			border-radius: 15px;
+			top: -10px;
+			right: 0;
 		}
 
 		.uk-modal-dialog {
